# exoskeleton-ai

./: .gitignore  CONTRIBUTING.md  END_TO_END_TEST_RESULTS.md  IMPLEMENTATION_REVIEW.md  Makefile  PORTFOLIO.md  README.md  TEST_SUMMARY.md  check_actual_torque_magnitudes.py  data-analysis-and-visualization.ipynb  main.py  plot_continuous_walking_torques.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: phase1.yaml
configs/model/: baseline.yaml  linear_baseline.yaml  tcn.yaml  tcn_large.yaml  tcn_single_joint.yaml  tcn_small.yaml
configs/pilots/: default.json
configs/splits/: split1.yaml
deploy/: exoskeleton-server.service
docs/: data_infrastructure_plan.md  deployment_options.md  georgia_dataset_analysis.md  inference.md  ml_control_interface.md  optimization_plan.md  setup.md  tcn_implementation_plan.md  tcn_quick_start.md
scripts/: analyze_training_results.py  debug_nan.py  diagnose_data.py  endpoint_tcn.py  export_onnx.py  inference_realtime.py  login_hf.py  predict_msgpack.cpp  prepare_hf_dataset.py  sample_inference.py  server.py  sync_experiments.py  test_dataloader.py  test_endpoint.cpp  test_server.py  test_tcn_model.py  train.py  train_single_joint_tcn.py  train_tcn.py  train_wandb.py  upload_to_hf.py
src/exoskeleton_ml/: __init__.py
src/exoskeleton_ml/data/: __init__.py  datasets.py  download.py  preprocessing.py
src/exoskeleton_ml/evaluation/: __init__.py  metrics.py
src/exoskeleton_ml/models/: __init__.py  baseline.py  linear_baseline.py  model_factory.py  tcn.py
src/exoskeleton_ml/training/: __init__.py  trainer.py
src/exoskeleton_ml/utils/: __init__.py  checkpointing.py  config.py  device.py  early_stopping.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  test_basic.py
tests/test_data/: test_dataloader.py  test_datasets.py  test_download.py  test_integration.py
